# GoIT_PyWeb_HW_3

./: part_1.py  part_2.py  pyproject.toml
